# try-mlflow

./: .gitignore  CLAUDE.md  README.md  create_experiment.py  create_runs.py  dataset.py  hello.py  pyproject.toml
data/: apple_sales.pkl  database.db
mlruns/0/: meta.yaml
mlruns/123221752520826381/: meta.yaml
mlruns/160692338975497610/: meta.yaml
mlruns/160692338975497610/0af766e72bf74b459afd6aa31961350b/: meta.yaml
mlruns/160692338975497610/594bef164b7e4d418d807476222af6a9/: meta.yaml
mlruns/160692338975497610/c3c41cb06d6a43ada409216d87248b9b/: meta.yaml
mlruns/367555898258971340/: meta.yaml
mlruns/367555898258971340/0438eb3ae71140d0acd16b8b8236f6f6/: meta.yaml
mlruns/367555898258971340/21a915b7c0d847a896db3b8eeeff1434/: meta.yaml
mlruns/367555898258971340/bdd2158df74c40efbb00f8a640ba98fe/: meta.yaml
mlruns/367555898258971340/d14507f58a944aca8ee82187cfa63331/: meta.yaml
mlruns/589787330567726593/: meta.yaml
mlruns/589787330567726593/270222d5d8dd46ce992652f557ac9dd5/: meta.yaml
mlruns/589787330567726593/371a9f261ff24249bfbe34da74cf4871/: meta.yaml
mlruns/589787330567726593/7362b3ddc604485fa7c3eb8a9b7eeb42/: meta.yaml
mlruns/589787330567726593/87195fb0f7974c048a3df0a66ec79f11/: meta.yaml
mlruns/611863087375240619/: meta.yaml
mlruns/767924269396079056/: meta.yaml
mlruns/974183668076745730/: meta.yaml
mlruns/models/three demo/: meta.yaml
nl-to-sql-tutorial/: README.md  database.py  definitions.py  log_model.py  main.py  sql_generation.py  vector_store.py  workflow.py
sim-search/: main.py  sentence-transformers-quickstart.ipynb
(+201 files in other folders)
