[project]
name = "try-mlflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "faiss-cpu>=1.11.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.4",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.68",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.2",
    "matplotlib>=3.10.0",
    "mlflow>=3.1.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pydantic>=2",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.0.0",
    "typing-extensions>=4.12.2",
]
